kubernetes/apps/productivity/termix/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: termix-internal
  namespace: productivity
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - termix.krapulax.home
  rules:
    - backendRefs:
        - name: termix
          namespace: productivity
          port: 80
